fixed error dialog fixed alignment of results table

--- a/client/css/results.css
+++ b/client/css/results.css
@@ -12,7 +12,7 @@
 }
 
 .dataTables_wrapper {
-	margin-top: -25px;
+	top: -25px;
 	z-index: 4;
 }
 
